# freelang-os-kernel

./: .gitignore  ANTI_LIE_IMPLEMENTATION_SUMMARY.md  ANTI_LIE_VERIFICATION_COMPLETION.md  ANTI_LIE_v1_FINAL_REPORT.md  ARCHITECTURE_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_ROADMAP.md  INDEX_ANTI_LIE_VERIFICATION.md  PHASE_H_COMPLETE_SUMMARY.md  PHASE_H_I_INTEGRATION_TESTING_REPORT.md  PHASE_H_WEEK1_COMPLETION_REPORT.md  PHASE_H_WEEK2_COMPLETION_REPORT.md  README.md  README_PHASE1.md  TEST_MOUSE_EMPIRE_COMPLETE.md  TEST_MOUSE_PHASE2_INTERRUPT_STORM_REPORT.md  TEST_MOUSE_PHASE2_STACK_INTEGRITY_REPORT.md  build.sh  linker.ld  package.json  x86_64-unknown-none.json
docs/: NEURAL_KERNEL_SENTINEL_DESIGN.md  NEURAL_KERNEL_SENTINEL_INITIATIVE.md  NEURAL_KERNEL_SENTINEL_PLAN.md  PHASE_5_DISTRIBUTED_SYSTEM_DESIGN.md  PHASE_5_WEEK1_REPORT.md  PHASE_6_7_8_FINAL_SYNTHESIS.md  PHASE_6_ML_ONLINE_LEARNING_DESIGN.md  PHASE_6_ML_ONLINE_LEARNING_REPORT.md  PHASE_7_NEURAL_KERNEL_SENTINEL_REPORT.md  PHASE_8_REAL_HARDWARE_REPORT.md
src/: allocator.rs  boot.asm  context.rs  demand_paging.rs  disk.rs  fat32.rs  gdt.rs  interrupt_storm.rs  interrupts.rs  io.rs  keyboard.rs  lib.rs  main.rs  memory.rs  paging.rs  scheduler.rs  serial.rs  stack_integrity.rs  syscall.rs  usermode.rs  vfs.rs  vga_buffer.rs
src/audit/: hash_chain.rs  mod.rs
src/distributed/: consensus.fl  failover.fl  mod.fl  (+1 more)
tests/: anti_lie_integration_test.rs  neural_kernel_sentinel_test.fl  phase8_complete_integration_test.fl  phase8_ebpf_integration_test.fl  phase_4.5_real_environment_test.fl  test_mouse_stack_integrity.py
(+29 files in other folders)
