[package]
name = "freelang-os-kernel"
version = "0.1.0"
edition = "2021"

# Bare-metal 개발
[dependencies]
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
volatile = "0.4"

[profile.dev]
panic = "abort"
lto = true
strip = false

[profile.release]
panic = "abort"
opt-level = 3
lto = true
strip = false

[[bin]]
name = "kernel"
path = "src/main.rs"
